--- a/sensor-monitoring/src/components/navbar.css
+++ b/sensor-monitoring/src/components/navbar.css
@@ -1,11 +1,74 @@
-nav{
+.navbar{
+    position: fixed;
+    height: 100%;
+    z-index: 99;
+    background: rgba(0,0,0,.7);
+}
+
+#nav_drawer{
+    width: 0px;
+    visibility: hidden;
+    transition: opacity .5s ease-in-out;
+}
+
+#navbar_checkbox{
+    position: absolute;
+    left:0;
+    z-index: 5;
+    opacity: 0;
+}
+
+#navbar_checkbox_label{
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none; 
+    -khtml-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
+    left: 0px; 
+    height:50px; 
+    width: 50px; 
+    display: block; 
+    position: fixed; 
+    background: rgba(255,255,255,.0);
+    z-index: 1;
+}
+
+#navbar_checkbox_label:before { 
+    content: ''; 
+    display: block; 
+    position: absolute; 
+    height: 2px; 
+    width: 24px; 
+    background: #8d8d8d; 
+    left: 13px; 
+    top: 18px; 
+    box-shadow: 0 6px 0 #8d8d8d, 0 12px 0 #8d8d8d; 
+} 
+
+#navbar_checkbox:checked ~ #nav_drawer{
+    visibility:visible;
     display: flex;
-    flex-direction: row;
-    width:100%;
-    background-color:transparent;
+    flex-direction: column;
+    position: sticky; 
+    top: 0; 
+    height: 100%; 
+    width: 300px; 
+    padding: 20px; 
+    transition: opacity .5s ease-in-out;
+    -webkit-overflow-scrolling: touch;
 }
 .link{
-    padding: 30px;
+    padding: 11px;
     text-decoration: none;
-    font-size: 30px;
+    font-size: 21px;
+    color: white;
+    box-shadow: 3px 7px 7px #060606;
+    background: rgba(45, 45, 45,0.9);
+    text-align: left;
+    margin-top: 10px;
+    height: 18px;
+    /* border-color: white; */
+    /* border: white 16px; */
+    border-radius: 4px
 }
