--- a/sensor-monitoring/src/App.css
+++ b/sensor-monitoring/src/App.css
@@ -1,7 +1,33 @@
 .App {
   text-align: center;
+  background-image: url('./images/backstretch.jpg');
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.login{
+  width: 854px;
+  height: 243px;
+  background: white;
+}
+
+.logo{
+  background-image: url(/static/media/ellucian-logo.d47b11b5.png);
+  width: 100%;
+  height: 60px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: 16px;
+}
+
+.bar{
+    width: 100%;
+    height: 30px;
+    background: #1c4d3f;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
