--- a/sensor-monitoring/src/Pages/Layman.css
+++ b/sensor-monitoring/src/Pages/Layman.css
@@ -1,8 +1,8 @@
 .layman{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width:100%;
-    flex-flow: row wrap;
+    align-items: center;
     justify-content:center;
 }
 
@@ -11,4 +11,20 @@
     font-size: 40px;
     position: relative;
     top:-40px;
+    text-align: center
 }
+.guages{
+    display: flex;
+    flex-direction: row;
+}
+.table{
+    position: relative;
+    color:white;
+}
+
+.table th, td {
+    border-bottom: 1px solid #ddd;
+    padding-top:20px;
+    text-align: left;
+    width:155px;
+  }
