--- a/sensor-monitoring/src/Pages/FrontPage.css
+++ b/sensor-monitoring/src/Pages/FrontPage.css
@@ -49,6 +49,38 @@
     color: #61dafb;
   }
   
+.initialNavigation{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.navbuttons{
+  height: 25px;
+  width: 150px;
+  border: 1px solid #007aff;
+  border-radius: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin:20px;
+  color:#007aff;
+}
+.navbuttons:hover{
+  background-color:#007aff;
+  color:white;
+}
+
+.navbuttons a{
+  text-decoration: none;
+  color:#007aff;
+  width:150px;
+}
+
+.navbuttons a:hover{
+  color:white;
+}
+
   @keyframes App-logo-spin {
     from {
       transform: rotate(0deg);
