--- a/sensor-monitoring/src/Pages/Policymakers.css
+++ b/sensor-monitoring/src/Pages/Policymakers.css
@@ -8,3 +8,9 @@
 .pageTitle{
     text-align: center;
 }
+
+.pieChart{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+}
