--- a/sensor-monitoring/src/Pages/FrontPage.css
+++ b/sensor-monitoring/src/Pages/FrontPage.css
@@ -15,12 +15,15 @@
   }
   
   .logo{
-    background-image: url(/static/media/ellucian-logo.d47b11b5.png);
     width: 100%;
     height: 60px;
     background-repeat: no-repeat;
     background-size: contain;
     margin: 16px;
+    font-size: 30px;
+    color: #1c4c3f;
+    text-transform: uppercase;
+    font-weight: bold;
   }
   
   .bar{
