--- a/sensor-monitoring/src/Pages/Overview.css
+++ b/sensor-monitoring/src/Pages/Overview.css
@@ -1,9 +1,15 @@
 .overview{
     padding: 45px;
+    background-color: greenyellow;
+    height: 100vh;
+    background-image: url('../images/backstretch.jpg');
+    background-size: cover;
+    overflow: hidden;
 }
 .heading-overview{
     color: rgba(255,255,255);
     font-size: 35px;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .heading-overview::after{
@@ -19,5 +25,6 @@
     color: white;
     text-align: justify;
     margin-top: 20px;
-    opacity:0.5;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    font-size: 20px;
 }
